/*
 * $Id: ChangeLog,v 1.6338 2009/01/18 07:19:53 andresreyesh Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-01-18 23:47 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/vm/errorapi.c
    - Commented out unused variable s_symErrorNew

2009-01-18 00:13 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * source/contrib/hbmzip/hbmzip.c
    * fixed GPF in hb_zipDeleteFile()

2009-01-18 07:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/hvm.c
    - my previous revert was not clean. It's clean now.

2009-01-18 06:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/hvm.c
  * source/vm/fm.c
    - reverted back C++ mode fixed memory subsystem initialization

2009-01-18 00:22 UTC+0100 Francesco Saverio Giudice (info/at/fsgiudice.com)
  * xharbour/source/rtl/hblog.prg
  * xharbour/source/rtl/hblognet.prg
    * fixed defined but unused vars

2009-01-17 18:35 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * common.mak
    * Formating, spaces -> tab

  * makefile.vc
    + Added missing $(LFLAGS) to DLLEXE_LINK_CMD

  * include/hbi18n.h
  * source/vm/hbi18n.c
    * Synchronized HB_EXTERN_* and low level API

  * source/rdd/usrrdd/rdds/logrdd.prg
    * Hacked to avoid missing extern in harbour.dll
      /* Francesco please review */

  * source/vm/errorapi.c
    * hb_dynsymNew() -> hb_dynsymGetCase() to avoid assertion failure.

  * source/vm/fm.c
    + Added assertion for hHeapAlloc

  * source/vm/hvm.c
    + Added hb_xinit() support to harbour.dll

2009-01-18 04:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/classes.h
  * include/hbvm.h
  * source/vm/classes.c
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! move some function prototypes to related include file

  * include/hbi18n.h
    ! put public functions under extern "C"
