@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6338 2009/01/18 07:19:53 andresreyesh Exp $
+ * $Id: ChangeLog,v 1.6339 2009/01/18 22:45:49 enricomaria Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2009-01-18 11:33 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
+  * source/contrib/hbmzip/hbmzip.c
+    *  add use of parameters nInternalAttr, nExternalAttr
+       in function HB_ZIPFILECREATE()
+       [ someone had forgotten ]
+       
 2009-01-18 23:47 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * source/vm/errorapi.c
     - Commented out unused variable s_symErrorNew
